# CryptoLib

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  CryptoLib-Doxyfile  LICENSE  Makefile  README.md  codecov.yml  readthedocs.yaml
fsw/: 20190717_tm_testing.txt  CMakeLists.txt
fsw/crypto_sadb/sadb_mariadb_admin_scripts/: create_sadb.sql  create_sadb_jpl_unit_test_security_associations.sql  create_sadb_unit_test_security_associations.sql  create_sadb_user_grant_permissions.sql
fsw/crypto_tests/: CMakeLists.txt
fsw/crypto_tests/data/: activate_sa4.txt  encryption_test_ping.txt  raw_tc_sdls_ping.txt  raw_tc_sdls_ping_bad_scid.txt  raw_tc_sdls_ping_bad_vcid.txt  stop_sa1.txt  validation1.txt
fsw/crypto_util/: CMakeLists.txt
fsw/crypto_util/app/: apply_security.c  crypto_sequence.c  et_dt_validation.c  et_validation.c  process_security.c  ut_tc_apply.c
fsw/crypto_util/include/: apply_security.h  crypto_sequence.h  et_validation.h  process_security.h  shared_util.h  ut_tc_apply.h  utest.h
fsw/crypto_util/src/: shared_util.c
fsw/for_build/: Makefile
fsw/platform_inc/: crypto.h  crypto_config.h  crypto_events.h  crypto_print.h  itc_cmac128.h  itc_gcm128.h
fsw/public_inc/: cfe_minimum.h  common_types_minimum.h  crypto.h  crypto_config.h  crypto_config_structs.h  crypto_error.h  crypto_print.h  crypto_props.h  crypto_structs.h  itc_aes128.h  itc_common_types_minimum.h  itc_gcm128.h  sadb_mariadb_error.h  sadb_routine.h
fsw/src/: crypto.c  crypto_print.c  crypto_props.c  itc_aes128.c  itc_cmac128.c  itc_gcm128.c  sadb_routine.c  sadb_routine_inmemory.template.c  sadb_routine_mariadb.template.c
fsw/src_mysql/: sadb_routine_mariadb.template.c
src/: CMakeLists.txt
src/core/: crypto.c  crypto_aos.c  crypto_aos_apply.c  crypto_aos_process.c  crypto_config.c  crypto_error.c  crypto_key_mgmt.c  crypto_mc.c  crypto_print.c  crypto_tc.c  crypto_tc_apply.c  crypto_tc_process.c  crypto_tm.c  crypto_tm_apply.c  crypto_tm_process.c  crypto_user.c
src/crypto/custom_stub/: cryptography_interface_custom_stub.template.c
src/crypto/kmc/: base64.c  base64.h  base64url.c  base64url.h  cryptography_interface_kmc_crypto_service.template.c  jsmn.h
src/crypto/kmc_stub/: cryptography_interface_kmc.stub.c
src/crypto/libgcrypt/: cryptography_interface_libgcrypt.template.c
src/crypto/libgcrypt_stub/: cryptography_interface_libgcrypt.stub.c
src/crypto/wolfssl/: cryptography_interface_wolfssl.template.c
src/crypto/wolfssl_stub/: cryptography_interface_wolfssl.stub.c
src/crypto_sadb/sadb-mariadb-sql/: create_sadb_user_grant_permissions.sql
src/crypto_sadb/sadb_mariadb_admin_scripts/: create_sadb.sql  create_sadb_jpl_unit_test_security_associations.sql  create_sadb_jpl_unit_test_security_associations_auth_only_aes.sql  create_sadb_jpl_unit_test_security_associations_enc_and_auth.sql  create_sadb_unit_test_security_associations.sql
src/crypto_sadb/sadb_mariadb_sql/: create_sadb.sql  create_sadb_error_path_unit_test_security_associations.sql  create_sadb_jpl_unit_test_security_associations.sql  delete_sadb.sql
src/crypto_sadb/test_sadb_mariadb_sql/: create_sadb_ivv_unit_tests.sql  create_sadb_jpl_unit_test_security_associations.sql
src/crypto_util/: CMakeLists.txt
src/crypto_util/include/: shared_util.h
src/crypto_util/src/: shared_util.c
src/crypto_util/util/: apply_security.c  crypto_sequence.c  et_dt_validation.c  process_security.c  (+1 more)
src/src_main/: crypto.c  crypto_aos.c  crypto_config.c  crypto_error.c  crypto_key_mgmt.c  crypto_mc.c  crypto_print.c  crypto_tc.c  crypto_tm.c  crypto_user.c  sadb_routine.c  sadb_routine_inmemory.template.c
src/src_mysql/: sadb_routine_mariadb.template.c
support/fuzz/: CMakeLists.txt  generate_corpus.py
test/: CMakeLists.txt  crypto_test.py  db_validation.py  encryption_test.py  format.py  key_generator.py
test/core/: apply_security.c  crypto_sequence.c  process_security.c  shared_util.c
test/include/: apply_security.h  crypto_sequence.h  et_dt_validation.h  process_security.h  shared_util.h  standalone.h  ut_aes_gcm_siv.h  ut_aos_apply.h  ut_aos_process.h  ut_b64.h  ut_crypto.h  ut_crypto_aos.h  ut_crypto_config.h  ut_crypto_mc.h  ut_ep_key_mgmt.h  ut_ep_key_validation.h  ut_ep_mc.h  ut_ep_sa_mgmt.h  ut_mariadb.h  ut_sa_save.h  ut_tc_apply.h  ut_tc_process.h  ut_tm_apply.h  ut_tm_process.h  utest.h
test/kmc/: ut_aos_kmc.c  ut_b64.c  ut_kmc_cam.c  ut_kmc_crypto.c  ut_kmc_crypto_auth_only.c  ut_kmc_crypto_cam.c  ut_kmc_crypto_with_mtls_sadb.c  ut_mariadb.c  ut_tc_kmc.c  ut_tm_kmc.c
test/performance/: pt_auth_as.c  pt_auth_enc_as.c  pt_auth_enc_ps.c  pt_gcry_base.c
test/sdls_ep_interop/: tc4.txt  tc5.txt
test/tests/: pt_auth_enc_as.c  pt_auth_enc_ps.c  ut_kmc_crypto.c  ut_kmc_crypto_auth_only.c  ut_kmc_crypto_with_mtls_sadb.c  ut_mysql_tls_connection.c  ut_tc_apply.c  ut_tc_kmc.c
test/unit/: et_dt_validation.c  ut_aes_gcm_siv.c  ut_aos_apply.c  ut_aos_process.c  ut_crypto.c  ut_crypto_aos.c  ut_crypto_config.c  ut_crypto_mc.c  ut_ep_key_mgmt.c  ut_ep_key_validation.c  ut_ep_mc.c  ut_ep_sa_mgmt.c  ut_mysql_m_tls_connection.c  ut_mysql_tls_connection.c  ut_sa_save.c  ut_sadb_err_cases_kmc_crypto.c  ut_tc_apply.c  ut_tc_process.c  ut_tm_apply.c  ut_tm_process.c
util/: CMakeLists.txt
util/core/: shared_util.c
util/include/: apply_security.h  et_dt_validation.h  process_security.h  shared_util.h  standalone.h  ut_crypto.h  ut_crypto_aos.h  ut_mariadb.h  ut_tc_apply.h  ut_tc_process.h  utest.h
util/src_util/: apply_security.c  crypto_sequence.c  et_dt_validation.c  process_security.c  pt_auth_as.c  pt_auth_enc.c  pt_auth_enc_as.c  pt_auth_enc_ps.c  pt_gcry_base.c  pt_itc_jpl.c  standalone.c  testfile.c  ut_1_way_mysql_tls_connection.c  ut_crypto.c  ut_crypto_aos.c  ut_crypto_config.c  ut_crypto_mc.c  ut_kmc_crypto.c  ut_kmc_crypto_aes_cmac.c  ut_kmc_crypto_auth_only.c  ut_kmc_crypto_cam.c  ut_kmc_crypto_with_mtls_sadb.c  ut_mariadb.c  ut_mysql_m_tls_connection.c  ut_mysql_tls_connection.c  ut_sadb_err_cases_kmc_crypto.c  ut_tc_apply.c  ut_tc_kmc.c  ut_tc_process.c  ut_tm_apply.c  ut_tm_process.c
(+188 files in other folders)
